src/ui/snapshots/lssub__ui__app__tests__account_screen.snap
---
source: src/ui/app.rs
expression: terminal.backend()
---
"┌ Account ─────────────────────────────────────────────────────────────────────────────────────────┐"
"│                                 ┏ Username ━━━━━━━━━━━━━━━━━━━━┓                                 │"
"│                                 ┃                              ┃                                 │"
"│                                 ┗━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┛                                 │"
"│                                 ┌ Password ────────────────────┐                                 │"
"│                                 │                              │                                 │"
"│                                 └──────────────────────────────┘                                 │"
"│                                         OK [Enter]  Cancel [Esc]                                 │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────┘"
"┌ Status ───────────────────────────────────────────────────────────────────┐┌ Downloads remaining ┐"
"│                                                                           ││       0 of 0        │"
"└───────────────────────────────────────────────────────────────────────────┘└─────────────────────┘"
"            F1: Help | F2: Search | F3: Account | F4: Languages | F10: Exit | F12: About            "
