src/ui/snapshots/lssub__ui__app__tests__subs_query.snap
---
source: src/ui/app.rs
expression: terminal.backend()
---
"┌ Search ──────────────────────────────────────────────────────────────────────────────────────────┐"
"│title                                                                                             │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────┘"
"┌ Results: 0 ──────────────────────────────────────────────────────────────────────────────────────┐"
"│Title                        Language   Year       Uploaded     Downloads    AI         Votes     │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────┘"
"┌ Status ───────────────────────────────────────────────────────────────────┐┌ Downloads remaining ┐"
"│                                                                           ││       0 of 0        │"
"└───────────────────────────────────────────────────────────────────────────┘└─────────────────────┘"
"            F1: Help | F2: Search | F3: Account | F4: Languages | F10: Exit | F12: About            "
